chore: update generated files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-09-13 Tue 13:03 -->
+<!-- 2022-09-13 Tue 13:15 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>WGSL Bug</title>
@@ -198,9 +198,9 @@
 <div id="content" class="content">
 <h1 class="title">WGSL Bug</h1>
 
-<div id="outline-container-org97df7da" class="outline-2">
-<h2 id="org97df7da">Code</h2>
-<div class="outline-text-2" id="text-org97df7da">
+<div id="outline-container-org7f2d42c" class="outline-2">
+<h2 id="org7f2d42c"><a href="./wgslbug.wgsl">Code</a></h2>
+<div class="outline-text-2" id="text-org7f2d42c">
 <div class="org-src-container">
 <pre class="src src-wgsl"><span class="linenr"> 1: </span>@group<span style="color: #61bfff;">(</span><span style="color: #bd93f9; font-weight: bold;">0</span><span style="color: #61bfff;">)</span>
 <span class="linenr"> 2: </span>@binding<span style="color: #61bfff;">(</span><span style="color: #bd93f9; font-weight: bold;">0</span><span style="color: #61bfff;">)</span>
@@ -228,9 +228,9 @@ Expected output is <code>[2, 1]</code> after executing break statement in second
 </div>
 </div>
 
-<div id="outline-container-org71da702" class="outline-2">
-<h2 id="org71da702">Results</h2>
-<div class="outline-text-2" id="text-org71da702">
+<div id="outline-container-orgb6817f7" class="outline-2">
+<h2 id="orgb6817f7">Results</h2>
+<div class="outline-text-2" id="text-orgb6817f7">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -379,7 +379,7 @@ Sometimes produces correct output, other times produces <code>[0, 0]</code> with
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: Kabir Kwatra</p>
-<p class="date">Created: 2022-09-13 Tue 13:03</p>
+<p class="date">Created: 2022-09-13 Tue 13:15</p>
 </div>
 </body>
 </html>
